# HU_Bot

./: .gitignore  README.md  benchmark_slumbot.py  combine_training_data.py  environment.yml  evaluate_agent.py  evaluation_results.txt  generate_policy_data.py  requirements.txt  run_full_training.sh  run_training.sh  train_multi_stack.py  train_policy_network.py  train_value_network.py  validate_strategy.py
alphaholdem/: README.md
alphaholdem/src/: __init__.py  encoder.py  env.py  network.py  ppo.py  subproc_vec_env.py  train.py  train_vec.py  train_vec_cpp.py  train_vec_v2.py  vec_env.py
cpp_rl_env/: CMakeLists.txt  build.sh
cpp_rl_env/src/: bindings.cpp  cards.hpp  env.hpp  game_state.cpp  game_state.hpp  vec_env.hpp  vec_env_v2.hpp
cpp_solver/: CMakeLists.txt  README.md  build.sh  build_python.sh
cpp_solver/docs/: ARCHITECTURE.md  PYTHON_CPP_MAPPING.md  ROADMAP.md
cpp_solver/include/ares/belief/: public_belief_state.hpp
cpp_solver/include/ares/cfr/: dcfr_solver.hpp  regret_minimizer.hpp
cpp_solver/include/ares/core/: cards.hpp  hand_evaluator.hpp
cpp_solver/include/ares/game/: action.hpp  holdem_state.hpp
cpp_solver/include/ares/neural/: networks.hpp  neural_evaluator.hpp
cpp_solver/include/ares/search/: realtime_search.hpp
cpp_solver/src/: main_eval.cpp  main_train.cpp  python_bindings.cpp
cpp_solver/src/belief/: public_belief_state.cpp
cpp_solver/src/cfr/: dcfr_solver.cpp
cpp_solver/src/core/: hand_evaluator.cpp
cpp_solver/src/game/: holdem_state.cpp
cpp_solver/src/neural/: neural_evaluator.cpp
cpp_solver/src/search/: realtime_search.cpp
cpp_solver/tests/: test_basic.cpp  test_hand_evaluator.cpp
output/quick_test_20251126_185542/: config.json  training_stats.json
output_test/pipeline_test_20251127_013050/: config.json
output_test/pipeline_test_20251127_013050/blueprints/: blueprint_20.0bb_500iter.pkl
src/: __init__.py
src/agent/: __init__.py  base_agent.py  cpp_cfr_agent.py  random_agent.py
src/game/: __init__.py  cards.py  holdem_state.py
src/neural/: __init__.py  cpp_data_loader.py  policy_network.py  value_network.py
src/search/: realtime_search.py
src/solver/: __init__.py
tests/: __init__.py  test_cards.py
